fixed another design issues and background picture on mobile device, added logos for manifest.json, install google analitics

--- a/src/Components/PageLoadingAnimation/PageLoadingAnimation.styles.scss
+++ b/src/Components/PageLoadingAnimation/PageLoadingAnimation.styles.scss
@@ -72,6 +72,24 @@
   }
 }
 
+@media screen and (max-width: 1450px) {
+  .loading-container {
+    .mask-wrapper{
+      mask-position: center 36%;
+    }
+  }
+}
+
+
+
+@media screen and (max-width: 450px) {
+  .loading-container {
+    .mask-wrapper{
+      mask-position: center 36.5%;
+    }
+  }
+}
+
 @media screen and (max-width: 450px) {
   .loading-container {
     .mask-wrapper{
@@ -83,7 +101,7 @@
 @media screen and (max-width: 380px) {
   .loading-container {
     .mask-wrapper{
-      mask-position: center 59%;
+      mask-position: center 60%;
     }
   }
 }
